Adjust spacing to avoid image overlapping text at wide viewport sizes

--- a/asstes/css/style.css
+++ b/asstes/css/style.css
@@ -92,7 +92,7 @@ main {
 .top-area-text > div {margin-bottom: 2.5rem;}
 .top-area-text > div:last-child {margin-bottom: 1.3rem;}
 
-.main-content-area {margin-top: 8rem;}
+.main-content-area {margin-top: 15rem;}
 
 .input-container {
   margin-bottom:2rem;
